tests/codegen/fail/interface/trait/argument_wrong_default_array.stderr
error[E0277]: the trait bound `[bool; 2]: From<[bool; 3]>` is not satisfied
 --> fail/interface/trait/argument_wrong_default_array.rs:3:1
  |
3 | #[graphql_interface]
  | ^^^^^^^^^^^^^^^^^^^^ the trait `From<[bool; 3]>` is not implemented for `[bool; 2]`
  |
  = help: the following other types implement trait `From<T>`:
            <[bool; LANES] as From<Mask<T, LANES>>>
            <[u32; 4] as From<ppv_lite86::generic::vec128_storage>>
            <[u64; 2] as From<ppv_lite86::generic::vec128_storage>>
            <[u64; 4] as From<ppv_lite86::generic::vec256_storage>>
            <[T; N] as From<Simd<T, N>>>
            <[T; 1] as From<(T,)>>
            <[T; 2] as From<(T, T)>>
            <[T; 3] as From<(T, T, T)>>
          and $N others
  = note: required for `[bool; 3]` to implement `Into<[bool; 2]>`
  = note: this error originates in the attribute macro `graphql_interface` (in Nightly builds, run with -Z macro-backtrace for more info)
